--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <main>
         <section id="container">
-            <article class="cartao">
+        <!-- <article class="cartao">
                 <div class="cartao_conteudo">
                     <h3>Programação</h3>
                 </div class="cartao_conteudo_pergunta">
@@ -45,7 +45,7 @@
                     <p>O javaScript é uma linguagem de Programação</p>
                 </div>
                 </div>
-            </article>
+            </article> -->
             <section>
                 <main>
             
