--- a/index.html
+++ b/index.html
@@ -48,4 +48,12 @@
             </article> -->
             <section>
                 <main>
+                    <footer>
+                        <p>Projeto desenvolvido por aluno - 2B </p>
+                    </footer>
+                    <script src="app.js"></script>
+                    <script src="perguntas.js"></script>
+                </body>
+
+                </html>
             
